--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -855,20 +855,16 @@ nav#TOC > input:checked + ul {
     margin-bottom: initial;
     border-left: initial;
     padding-left: initial;
-
     position: sticky;
     margin-top: calc(var(--nav-toc-baseline-offset));
     float: left;
     top: var(--line-height);
-
     font-size: var(--nav-toc-font-size);
     color: var(--color-text-secondary);
-
     margin-left: var(--line-height);
-
     max-width: calc((100vw - var(--main-width)) / 2 - 2 * var(--line-height));
     max-height: calc(100vh - 2 * var(--line-height));
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   nav#TOC label {
@@ -952,7 +948,7 @@ nav#TOC > input:checked + ul {
 
   .wide {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
 
   .wide.extra-wide {
@@ -1007,7 +1003,7 @@ nav#TOC > input:checked + ul {
 
   .wide {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
   }
 
@@ -1073,7 +1069,7 @@ nav#TOC > input:checked + ul {
 
   .wide {
     width: var(--main-width);
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
   }
 
@@ -1125,7 +1121,7 @@ nav#TOC > input:checked + ul {
 
   .wide {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
   }
 
